Added active field in drivers table
